# nostr-arena-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
python/nostr_arena/: __init__.py
src/: lib.rs
tests/: test_arena.py
