[package]
name = "nostr-arena-python"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kako-jun/nostr-arena-python"
authors = ["kako-jun <ppdg85ae99aaq2q2@gmail.com>"]
description = "Python bindings for nostr-arena"

[lib]
name = "nostr_arena"
crate-type = ["cdylib"]

[dependencies]
nostr-arena = { git = "https://github.com/kako-jun/nostr-arena.git" }
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pythonize = "0.23"
